# ChangeLog for dev-libs/openssl
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.259 2008/05/16 15:52:48 ulm Exp $

  16 May 2008; Ulrich Mueller <ulm@gentoo.org> openssl-0.9.8g-r1.ebuild:
  Don't install bogus Emacs support file, bug 222337.

*openssl-0.9.8g-r1 (25 Mar 2008)

  25 Mar 2008; Doug Goldstein <cardoe@gentoo.org>
  +files/openssl-0.9.8g-sslv3-no-tlsext.patch, +openssl-0.9.8g-r1.ebuild:
  Patch from OpenSSL's bug tracker not to send TLS Extensions on SSLv3 only
  connections, while not explicitly against the SSL spec, several SSL
  implementations can not handle it. Patch by Kaspar Brand
  <ossl-rt@velox.ch> from http://rt.openssl.org/Ticket/Display.html?id=1629.
  Resolves bug #198914

  24 Dec 2007; Mike Frysinger <vapier@gentoo.org> openssl-0.9.8g.ebuild:
  Dont force src_test any longer as things seem to be sane.

  24 Nov 2007; Brent Baude <ranger@gentoo.org> openssl-0.9.8g.ebuild:
  Keywording openssl-0.9.8g ppc for bug 198370

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> openssl-0.9.8g.ebuild:
  Stable on mips, per #198370.

  16 Nov 2007; Doug Klima <cardoe@gentoo.org> openssl-0.9.8g.ebuild:
  change depend to mit-krb5 since openssl's Configure script specifically
  states they don't support building against heimdal and it will break. Which
  results in a die during the ebuild

  12 Nov 2007; Mike Frysinger <vapier@gentoo.org> openssl-0.9.8g.ebuild:
  Filter out $APPS from the environment #197996.

  09 Nov 2007; Daniel Gryniewicz <dang@gentoo.org> openssl-0.9.8g.ebuild:
  Marked stable on amd64 for bug #198370

  08 Nov 2007; Jeroen Roovers <jer@gentoo.org> openssl-0.9.8g.ebuild:
  Stable for HPPA (bug #198370).

  07 Nov 2007; Markus Rothe <corsair@gentoo.org> openssl-0.9.8g.ebuild:
  Stable on ppc64; bug #198370

  07 Nov 2007; Raúl Porcel <armin76@gentoo.org> openssl-0.9.8g.ebuild:
  alpha/ia64 stable wrt #198370
