@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/openssl
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.259 2008/05/16 15:52:48 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.260 2008/05/28 16:30:40 vapier Exp $
+
+*openssl-0.9.8h (28 May 2008)
+
+  28 May 2008; Mike Frysinger <vapier@gentoo.org> +openssl-0.9.8h.ebuild:
+  Version bump.
 
   16 May 2008; Ulrich Mueller <ulm@gentoo.org> openssl-0.9.8g-r1.ebuild:
   Don't install bogus Emacs support file, bug 222337.
